3.1.1 dev
- Introduce php-mock/php-mock-phpunit

3.1.0
- Use some real autoloading, with a fallback to manually including
  all files.
- Plugins can now register additional skins.
- kreXX debug calls will return the original analysis value.
- Leading and trailing spaces are now better visible in the output.
- The backtrace action accepts now an already existing one. Great
  for debugging error objects.
- Minor usability changes to both skins.
- Added an automatic backtrace analysis for error objects.
- Added the sourcecode dump to the error object analysis.
- Added proper handling for BOM chars in array keys and properties.
- Added an exception handler, to replace the PHP5 Fatal Error Handler.
- Added the date time to the output.
- Added analysis of the meta data of an object.
- Change: Lots of deprecations.
- Change: Moved the skin render classes to the source folder.
- Change: Dropped PHP 5.3 and PHP 5.4 support.
- Change: Moved the last hardcoded html tags to the skin renderers.
- Change: When registering a plugin, you must use a class instance,
  instead of a name of a static class.
- Bugfix: Fixes some "bugs" SonarCube found in the unit test fixtures,
  to prevent bad ratings.
- Bugfix: Check if the developer handle is actually a string.
- Bugfix: Added a missing check in the url determination in the
  timer controller
- Bugfix: The registering of blacklisted methods and classes for
  the debug methods work now, as they should.
- Bugfix: The rewriting of singleton classes in the pool does not
  work.
- Bugfix: Adding additional data in the code generation is not
  rendered.
- Bugfix: Added the plugin list to the (fatal) error handler
  display of the smokygrey skin.
- Bugfix: Wrong display of null and boolean default values in the
  code generation and method analysis.
- Bugfix: Display of wrong filename when a kreXX resource is not readable.
- Bugfix: The registry will not return values that are considered empty().