@@ -62,10 +62,6 @@ use Throwable;
  */
 class Objects extends AbstractCallback
 {
-    /**
-     * {@inheritdoc}
-     */
-    protected static $eventPrefix = 'Brainworxx\\Krexx\\Analyse\\Callback\\Analyse\\Objects';
 
     /**
      * Starts the dump of an object.
