@@ -50,11 +50,6 @@ abstract class AbstractObjectAnalysis extends AbstractCallback
 {
 
     /**
-     * {@inheritdoc}
-     */
-    protected static $eventPrefix = 'Brainworxx\\Krexx\\Analyse\\Callback\\Analyse\\Objects\\AbstractObjectAnalysis';
-
-    /**
      * Here we store all relevant data.
      *
      * @var Pool
