@@ -57,10 +57,6 @@ use Throwable;
  */
 class DebugMethods extends AbstractObjectAnalysis
 {
-    /**
-     * {@inheritdoc}
-     */
-    protected static $eventPrefix = 'Brainworxx\\Krexx\\Analyse\\Callback\\Analyse\\Objects\\DebugMethods';
 
     /**
      * Calls all configured debug methods in die class.
