@@ -56,10 +56,6 @@ use Throwable;
  */
 class Traversable extends AbstractObjectAnalysis
 {
-    /**
-     * {@inheritdoc}
-     */
-    protected static $eventPrefix = 'Brainworxx\\Krexx\\Analyse\\Callback\\Analyse\\Objects\\Traversable';
 
     /**
      * Checks runtime, memory and nesting level. Then trigger the actual analysis.
