@@ -51,10 +51,6 @@ use Brainworxx\Krexx\Analyse\Model;
  */
 class ThroughArray extends AbstractCallback
 {
-    /**
-     * {@inheritdoc}
-     */
-    protected static $eventPrefix = 'Brainworxx\\Krexx\\Analyse\\Callback\\Iterate\\ThroughArray';
 
     /**
      * Renders the expendable around the array analysis.
